--- a/handler/pom.xml
+++ b/handler/pom.xml
@@ -64,6 +64,11 @@
             <version>5.0.0.Alpha1</version>
         </dependency>
         <dependency>
+            <groupId>com.evilco.mc</groupId>
+            <artifactId>nbt</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>me.hfox</groupId>
             <artifactId>aphelion-core</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -115,6 +120,7 @@
                                     <include>org.fusesource.jansi:jansi</include>
                                     <include>org.bouncycastle:bcprov-jdk15on</include>
                                     <include>me.hfox:aphelion-core</include>
+                                    <include>com.evilco.mc:nbt</include>
                                 </includes>
                             </artifactSet>
                             <filters>
